# hapsi

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  prelude.rs
src/chord/: chord.rs  mod.rs
src/core/: chord.rs  distance.rs  interval.rs  keyboard.rs  mod.rs  number.rs  pitch.rs  scale.rs  tone.rs  transpose.rs
src/detect/: chord.rs  mod.rs  scale.rs
src/parse/: mod.rs  tone.rs
src/scale/: diatonic.rs  mod.rs  pentatonic.rs
src/tonality/: mod.rs
src/tonality/note/: mod.rs  note.rs  symbol.rs  tone.rs
src/tonality/scale/: major_pentatonic_scale_walker.rs  major_scale.rs  major_scale_walker.rs  minor_pentatonic_scale_walker.rs  minor_scale.rs  minor_scale_walker.rs  mod.rs
src/twelve_tet/: mod.rs  tone.rs
